--- a/demo/index.html
+++ b/demo/index.html
@@ -52,7 +52,7 @@
 						<ul class="navi_lists l-navi clearfix">
 							<li><a href="#section01">TOPICS</a></li>
 							<li><a href="#section02">LINKS</a></li>
-							<li><a href="./styleGuide/" target="_blank">Style Guide</a></li>
+							<li><a href="https://css-style-guide.yoshikieee.com/" target="_blank">Style Guide</a></li>
 							<li><a href="https://github.com/Vicugn4Pac0s/template_html" target="_blank">GitHub</a></li>
 						</ul>
 					</nav>
@@ -71,7 +71,7 @@
 							<li class="l-grid_item l-grid_item-12">
 								<div class="button">
 									<p class="button_text">
-										<a href="./zip/html_template_v3_0_0.zip" download>Download Ver 3.0.0</a>
+										<a href="https://github.com/Vicugn4Pac0s/template_html/archive/main.zip">Download Ver 3.0.0</a>
 									</p>
 								</div>
 							</li>
@@ -126,7 +126,7 @@
 									</article>
 								</li>
 								<li class="l-grid_item l-grid_item-3">
-									<a href="./styleGuide/" target="_blank">
+									<a href="https://css-style-guide.yoshikieee.com/" target="_blank">
 										<article class="media media-typeB">
 											<header class="media_header u-mb5">
 												<div class="media_image u-mb5">
@@ -171,7 +171,7 @@
 						</div>
 						<div class="button">
 							<p class="button_text">
-								<a href="./zip/html_template_v3_0_0.zip" download>Download Ver 3.0.0</a>
+								<a href="https://github.com/Vicugn4Pac0s/template_html/archive/main.zip">Download Ver 3.0.0</a>
 							</p>
 						</div>
 					</div>
@@ -189,7 +189,7 @@
 						<div class="l-right">
 							<div class="button">
 								<p class="button_text">
-									<a href="./zip/html_template_v3_0_0.zip" download>Download Ver 3.0.0</a>
+									<a href="https://github.com/Vicugn4Pac0s/template_html/archive/main.zip">Download Ver 3.0.0</a>
 								</p>
 							</div>
 						</div>
@@ -197,7 +197,7 @@
 					<div class="section_body">
 						<ul class="l-grid l-gutter-m">
 							<li class="l-grid_item l-grid_item-12 u-mb30">
-								<a href="./styleGuide/" target="_blank">
+								<a href="https://css-style-guide.yoshikieee.com/" target="_blank">
 									<section class="menu menu-01 menu-ritch l-pos-relative">
 
 										<div class="menu_texts01 menu_texts01-w">
