--- a/demo/index.html
+++ b/demo/index.html
@@ -278,7 +278,7 @@
 
 		<footer id="footer" class="footer">
 			<p class="copy">
-				<small>Copyright &copy; 2020 Yoshiki Yamada Inc. All Rights Reserved.</small>
+				<small>Copyright &copy; 2020 YOSHIKI. All Rights Reserved.</small>
 			</p>
 		</footer>
 
